# no-code-architects-toolkit

./: .dockerignore  .env.example  .env.local  .env.local.minio.n8n  .env.minio.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README-local.md  README.md  app.py  app_utils.py  captions.md  compose.yaml  config.py  docker-compose-custom-build.yml  docker-compose.local.minio.n8n.md  docker-compose.local.minio.n8n.yml  docker-compose.local.yml  docker-compose.md  docker-compose.minio.n8n.yml  docker-compose.prod.minio.yml  docker-compose.yml  docker.md  document_endpoints.py  fly.toml  generate_docs.py  generate_vector.sh  gunicorn.conf.py  local.py  local.sh  patches  preload.py  printfiles.sh  pyproject.toml  queue_utils.py  render.yaml  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy-minio.yml  deploy.yml  docker_build.yml  generate_docs.yml  retarget-to-build.yml  update-build-number.yml
docs/: adding_routes.md  audio-mixing.md  authenticate.md  caption-video.md  combine-videos.md  extract-keyframes.md  gdrive-upload.md  image-to-video.md  media-to-mp3.md  media_convert.md  transcribe-media.md
docs/audio/: concatenate.md  speech.md
docs/cloud-installation/: do.md  gcp.md
docs/ffmpeg/: compose.md  ffmpeg_compose.md
docs/gcp/: upload.md
docs/image/: screenshot_webpage.md
docs/media/: cut.md  download.md  feedback.md  (+6 more)
patches/: add-output-dir-support.diff
routes/: __init__.py  audio_mixing.py  authenticate.py  authentication.py  caption_video.py  combine.py  combine_videos.py  convert.py  doc_to_pdf.py  extract_keyframes.py  gdrive_upload.py  health_check.py  image_to_video.py  job_status.py  job_submission.py  media_to_mp3.py  text_to_speech.py  transcribe.py  transcribe_media.py  webhook.py
scripts/: generate_ai_context.py  save_videos_to_supabase.py
services/: __init__.py  ass_toolkit.py  audio_mixing.py  authentication.py  caption_video.py  cleanup.py  cloud_storage.py  csv_manager.py  extract_keyframes.py  ffmpeg_processing.py  ffmpeg_toolkit.py  ffmpeg_tools.py  file_management.py  gcp_toolkit.py  gdrive_service.py  image_to_video.py  job_processor.py  minio_toolkit.py  runpod_whisper.py  s3_toolkit.py  transcription.py  webhook.py  whisper_transcription.py
static/: index.html
tests/: conftest.py  test_endpoints.py  test_setup_validation.py
traefik/: traefik.yml
ui/: .env.example  .gitignore  package-lock.json  package.json
utils/: cleanup.py  threading_tasks.py
(+150 files in other folders)
